[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/DialogBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://classes/DialogDriver.gd" type="Script" id=2]

[node name="DialogDriver" type="Node"]
script = ExtResource( 2 )

[node name="DialogBox" parent="." instance=ExtResource( 1 )]

[connection signal="dialog_line_done" from="DialogBox" to="." method="_on_DialogBox_dialog_line_done"]
[connection signal="dialog_option_selected" from="DialogBox" to="." method="_on_DialogBox_dialog_option_selected"]
